name:                tls-pure-demo
version:             0.0.0.0
license:             BSD3
license-file:        LICENSE
author:              Nick Spinale
maintainer:          nick@nickspinale.com
build-type:          Simple
cabal-version:       >= 1.10

executable tls-pure-demo
  main-is:             Demo.hs
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , tls-pure
                     , asn1-types
                     , bytestring
                     , base16-bytestring
                     , cryptonite
                     , data-default
                     , exceptions
                     , hourglass
                     , lens
                     , mtl
                     , network
                     , pipes
                     , streaming-commons
                     , x509
  default-language:    Haskell2010
  ghc-options:         -Wall
